required input field

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -24,7 +24,7 @@
 
 
   <form action="/" method="post" class="add-form">
-    <input type="text" placeholder="Add new task..." name="newItem" autocomplete="off" />
+    <input type="text" placeholder="Add new task..." name="newItem" autocomplete="off" required/>
     <button type="submit" class="add-btn" name="list" value="<%= listTitle %>">
       +
     </button>
